--- a/Ruleta.css
+++ b/Ruleta.css
@@ -33,6 +33,7 @@
 
 .Cian{
     background:darkcyan;
+    cursor: pointer;
 }
 
 .Cian.light{
@@ -41,6 +42,7 @@
 
 .Green{
     background: rgba(91, 133, 9, 0.404);
+    cursor: pointer;
 }
 
 .Green.light{
@@ -49,6 +51,7 @@
 
 .Oranje{
     background: orangered;
+    cursor: pointer;
 }
 
 .Oranje.light{
@@ -57,6 +60,7 @@
 
 .Red{
     background: red;
+    cursor: pointer;
 }
 
 .Red.light{
